<resources>
    <string name="app_name">Cady_Lab8</string>
    <string name="title">How would you like to travel?</string>
    <string name="land">Land</string>
    <string name="air">Air</string>
    <string name="sea">Sea</string>
    <string name="button">Search</string>
    <string name="title_activity_transportation">TransportationActivity</string>
    <string name="suggestedTravelmode">This is the transport type you should take</string>
</resources>
